Bug 105150 - PPTX import: shape fill is not set to slide default background color
Summary: PPTX import: shape fill is not set to slide default background color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-06 14:25 UTC by Miklos Vajna
Modified: 2022-07-01 09:55 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
Rerproducer document. (31.21 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2017-01-06 14:25 UTC, Miklos Vajna
Details
PPT equivalent of the above PPTX bugdoc. (135.50 KB, application/vnd.ms-powerpoint)
2017-01-06 18:05 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-01-06 14:25:31 UTC
Created attachment 130205 [details]
Rerproducer document.

See the attached bugdoc. Ideally the red rectangle is covered by the other shape due to the <p:sp useBgFill="1"> XML attribute. Bug given that the slide doesn't have an explicit background fill either, we ignore that, so the red rectangle is visible, while it is not in PowerPoint.
Comment 1 Commit Notification 2017-01-06 16:44:47 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=59339dec1ce56213dc74a06af2f0d35ac1c534d7

tdf#105150 PPTX import: try harder to handle <p:sp useBgFill="1">

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Miklos Vajna 2017-01-06 18:05:50 UTC
Created attachment 130217 [details]
PPT equivalent of the above PPTX bugdoc.

This is still not handled.
Comment 3 Commit Notification 2017-01-06 18:07:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b9648deb1d99cde1c085767433242d6e1b834e2d

Related: tdf#105150 PPT import: handle mso_fillBackground fill type of shapes

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.