tdf#105150 PPTX import: try harder to handle <p:sp useBgFill="1">

The bugdoc has two shapes. The red rectangle is supposed to be covered
by the other shape, but it wasn't as the fill style was set to none. The
reason for that was we ignored useBgFill, unless the slide had an
explicit fill style. Assume that in that case a white solid fill is the
default.

Change-Id: Iea20e216e44e13db68887f285c10bc1a8feacf0a